# LogisticsApp

FrontEnd/: .firebaserc  copy.txt  firebase.json  npmGenerator.ps1  package-lock.json  package.json
FrontEnd/.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
FrontEnd/src/: App.jsx  Login.jsx  Scan.jsx  firebase.js
backend/: pyproject.toml
backend/Tasin/: manage.py  patch_html.py
backend/Tasin/Tasin/: asgi.py  settings.py  urls.py  wsgi.py
backend/Tasin/core_logistics/: admin.py  apps.py  database_architecture.txt  mock_optimizer.py  models.py  serializers.py  urls.py  views.py
backend/Tasin/core_logistics/management/commands/: populate_db.py  seed_data.py
backend/Tasin/core_logistics/migrations/: 0001_initial.py
backend/Tasin/react_accounts/: urls.py  views.py
backend/Tasin/react_accounts/static/react/: index.html
backend/Tasin/react_accounts/static/react/assets/: index-BsnKZ47W.js
backend/Tasin/react_accounts/templates/react/: index.html
